<resources>
    <string name="app_name">CurrencyCalculator</string>


    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>

    <!-- Number -->
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="no0">0</string>
    <string name="no_dot">.</string>
    <string name="no_c">C</string>
    <string name="no_del">Del</string>

    <!-- mention -->
    <string name="no_anymore">limited</string>
    <string name="try_later">try again later please.</string>




</resources>
