<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.project.tk.currencycalculator.fragment.MainFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/shape_rounded_blue"
            app:layout_constraintBottom_toTopOf="@+id/layout_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#329cbf"
            app:layout_constraintBottom_toTopOf="@+id/layout_no">


            <Button
                android:id="@+id/btn_nation"
                style="@style/btnNation"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_action_expand"
                android:drawableStart="@drawable/na_korea_south"
                android:text="ABV"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_to_rate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_from_rate"
                style="@style/tvRate"
                android:onClick="@{fragment::onClickFromTv}"
                android:text="1,123.22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_to_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/btn_nation"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_from_value"
                style="@style/tvValue"
                android:onClick="@{fragment::onClickFromTv}"
                android:text="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toEndOf="@+id/tv_to_rate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/tv_currency"
                style="@style/tvCurrency"
                android:text="Korea WON"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_from_value" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e1efef"
            android:paddingTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linear_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linear_cdel"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_no_1"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no1" />

                    <Button
                        android:id="@+id/btn_no_2"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no2" />

                    <Button
                        android:id="@+id/btn_no_3"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no3" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_no_4"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no4" />

                    <Button
                        android:id="@+id/btn_no_5"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no5" />

                    <Button
                        android:id="@+id/btn_no_6"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_no_7"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no7" />

                    <Button
                        android:id="@+id/btn_no_8"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no8" />

                    <Button
                        android:id="@+id/btn_no_9"
                        style="@style/btnNo"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no9" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_no_zero"
                        style="@style/btnNoZero"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no0" />

                    <Button
                        android:id="@+id/btn_no_dot"
                        style="@style/btnNoDot"
                        android:onClick="@{fragment::onClickNo}"
                        android:text="@string/no_dot" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_cdel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/linear_no">

                <Button
                    android:id="@+id/btn_no_c"
                    style="@style/btnNoSide"
                    android:onClick="@{fragment::onClickCorD}"
                    android:text="@string/no_c"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btn_no_del"
                    style="@style/btnNoSide"
                    android:onClick="@{fragment::onClickCorD}"
                    android:text="@string/no_del"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/btn_close"
                    style="@style/btnClose"
                    android:layout_marginBottom="8dp"
                    android:text="X"
                    app:layout_constraintBottom_toTopOf="@+id/btn_transform"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btn_transform"
                    style="@style/btnClose"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{fragment::changeToSet1}"
                    android:text="Tran"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btn_trans_back"
            style="@style/btnClose"
            android:onClick="@{fragment::changeToBack}"
            android:text="Tran"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>
